changed the app icon link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="https://sdmntprwestus2.oaiusercontent.com/files/00000000-c47c-61f8-91b4-a04e38769b88/raw?se=2025-09-14T11%3A14%3A00Z&sp=r&sv=2024-08-04&sr=b&scid=70f7fb6c-2c09-52e5-9955-c46a787157e2&skoid=c953efd6-2ae8-41b4-a6d6-34b1475ac07c&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-13T20%3A02%3A19Z&ske=2025-09-14T20%3A02%3A19Z&sks=b&skv=2024-08-04&sig=6CltMNcSGjNd%2BzeKbmw1uZDAMc3iwAO4paR4BCfWz9I%3D" content="width=device-width, initial-scale=1.0" />
     <title>Dev meet</title>
   </head>
   <body>
